--- a/BaseLib/BaseLib.vcxproj
+++ b/BaseLib/BaseLib.vcxproj
@@ -143,6 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Src\Resources\PicCommandsCommon.h" />
     <ClInclude Include="Src\Resources\ResourceLoader.h" />
     <ClInclude Include="Src\Util\Codec.h" />
     <ClInclude Include="Src\Util\EnumFlags.h" />
@@ -157,6 +158,7 @@
     <ClInclude Include="Src\Util\WindowsUtils.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Src\Resources\PicCommandsCommon.cpp" />
     <ClCompile Include="Src\Resources\ResourceLoader.cpp" />
     <ClCompile Include="Src\Util\Codec.cpp" />
     <ClCompile Include="Src\Util\Logger.cpp" />
