--- a/BaseLib/BaseLib.vcxproj
+++ b/BaseLib/BaseLib.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="Src\Resources\PicCommandsCommon.h" />
     <ClInclude Include="Src\Resources\ResourceLoader.h" />
     <ClInclude Include="Src\Util\Codec.h" />
+    <ClInclude Include="Src\Util\CodecAlt.h" />
     <ClInclude Include="Src\Util\EnumFlags.h" />
     <ClInclude Include="Src\Util\Geometry.h" />
     <ClInclude Include="Src\Util\Iterators.h" />
@@ -161,6 +162,7 @@
     <ClCompile Include="Src\Resources\PicCommandsCommon.cpp" />
     <ClCompile Include="Src\Resources\ResourceLoader.cpp" />
     <ClCompile Include="Src\Util\Codec.cpp" />
+    <ClCompile Include="Src\Util\CodecAlt.cpp" />
     <ClCompile Include="Src\Util\Logger.cpp" />
     <ClCompile Include="Src\Util\PerfTimer.cpp" />
     <ClCompile Include="Src\Util\RunLogic.cpp" />
